--- a/css/style.css
+++ b/css/style.css
@@ -14,17 +14,12 @@ body{
 *, *::before, *::after{
     box-sizing: inherit;
 }
-img{
+img , video{
     width: 100%;
     height: auto;
     display: block;
 }
-video{
-    width: 100%;
-    height: auto;
-    display: block;
 
-}
 
 /*Begin Header Navbar Styles*/
 .nav-bar{
@@ -81,6 +76,11 @@ video{
 /*hero header Navbar Changes*/
 .hero-nav{
     background: none;
+    grid-column: 1 / -1;
+    grid-row: 1 / -1;
+    background: none;
+    align-content: top;
+    z-index:10;
 }
 .hero-nav .logo a, 
 .hero-nav .nav-menu a {
@@ -111,6 +111,17 @@ video{
         grid-column: 1 / -1;
         grid-row: 1 / -1;
     }
+    .hero-image-box::after{
+        content: "";
+        background-color: rgba(0,0,0,0.6);
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        top:0 ;
+        left: 0;
+
+    }
+    
 
     .hero-img, .hero-video{
         width: 100%;
@@ -126,4 +137,34 @@ video{
         z-index: 10;
         text-align: center;
     }
-    
+    .hero-heading{
+        font-size: 1.5rem;
+        letter-spacing: 0.05rem;
+        font-weight: bold;
+        text-transform: uppercase;
+        color: white;
+    }
+
+    .hero-text{
+        font-size: 1rem;
+        margin-top:  0.5rem ;
+        color: white;
+    }
+    .hero-button{
+        display: inline-block;
+        padding: 0.75rem 2rem;
+        background: none;
+        color: white;
+        font: size 1.2rem;
+        font-weight: bold;
+        border: 1px solid white;
+        border-radius: 5px;
+        margin-top: 2rem;
+    }
+
+    .hero-button:hover{
+        transform: scale(0.95);
+    }
+    .hero-button:active{
+        background: rgba(0,0,0,0.3);
+    }
