--- a/css/style.css
+++ b/css/style.css
@@ -22,16 +22,16 @@ img , video{
 
 
 /*Begin Header Navbar Styles*/
-.nav-bar{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
+ .nav-bar{
+    display:flex;
+    flex-wrap:wrap;
+    justify-content:center;
+    align-items:center; 
     line-height: 1rem;
-    overflow: hidden;
+    overflow:hidden;
     background-color: #fff;
 
-}
+}  
 .logo, .nav-menu
 {
     text-transform: uppercase;
@@ -44,7 +44,7 @@ img , video{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    align-items: center;
+    align-items: center; 
     padding: 0;
     margin: 0;
 }
@@ -62,7 +62,7 @@ img , video{
     text-decoration: none;
     letter-spacing: 0.2rem;
     padding: 0.8rem;
-    color: #000;
+    color:#fff;
 }
 .nav-bar a {
     font-weight: 400;
@@ -79,7 +79,7 @@ img , video{
     grid-column: 1 / -1;
     grid-row: 1 / -1;
     background: none;
-    align-content: top;
+    align-content:top;
     z-index:10;
 }
 .hero-nav .logo a, 
@@ -111,7 +111,7 @@ img , video{
         grid-column: 1 / -1;
         grid-row: 1 / -1;
     }
-    .hero-image-box::after{
+   .hero-image-box::after{
         content: "";
         background-color: rgba(0,0,0,0.6);
         height: 100%;
@@ -167,4 +167,20 @@ img , video{
     }
     .hero-button:active{
         background: rgba(0,0,0,0.3);
+    }
+
+    /*footer*/
+    .footer-logo{
+        white-space: nowrap;
+
+    }
+    .footer-social{
+        display: flex;
+        justify-content: center;
+        padding-top: 3rem;
+    }
+    .footer-social a {
+        color: black;
+        padding: 0 1rem;
+
     }
