--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ html{
     line-height: 1.5rem;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
-    height: 100%;
+    height: auto;
 }
 body{
     margin: 0 auto;
